@@ -1,4 +1,5 @@
 0.7.0 (currently working on)
+- [#2489] Fix: "Edit event" link missing in the "my managed events" list
 - [#2490] Fix: Broken label "label_" in the FE registrations list
 - [#2502] Change: Update copyrights to 2009
 - [#2477] Fix: Icon for CSV export of event data missing from mod2
